--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -170,3 +170,9 @@
         </div>
     </div>
 }
+else
+{
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
+}
