--- a/webMetics/Views/Tema/ListaTemas.cshtml
+++ b/webMetics/Views/Tema/ListaTemas.cshtml
@@ -110,7 +110,9 @@
 }
 else
 {
-    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
 }
 
 <script type="text/javascript">
