--- a/webMetics/Views/Asesor/EditarAsesor.cshtml
+++ b/webMetics/Views/Asesor/EditarAsesor.cshtml
@@ -161,7 +161,9 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+        <script>
+            window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+        </script>
     }
 
     <script>
