--- a/webMetics/Views/Categoria/EditarCategoria.cshtml
+++ b/webMetics/Views/Categoria/EditarCategoria.cshtml
@@ -69,5 +69,7 @@
 }
 else
 {
-    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
 }
