--- a/webMetics/Views/Categoria/ListaCategorias.cshtml
+++ b/webMetics/Views/Categoria/ListaCategorias.cshtml
@@ -112,7 +112,9 @@
 }
 else
 {
-    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
 }
 
 <script type="text/javascript">
