--- a/webMetics/Views/Participante/ObtenerParticipante.cshtml
+++ b/webMetics/Views/Participante/ObtenerParticipante.cshtml
@@ -26,7 +26,9 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+        <script>
+            window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+        </script>
     }
     </body>
 </html>
