--- a/webMetics/Views/Tema/CrearTema.cshtml
+++ b/webMetics/Views/Tema/CrearTema.cshtml
@@ -63,5 +63,7 @@
 }
 else
 {
-    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
 }
