--- a/webMetics/Views/Tema/EditarTema.cshtml
+++ b/webMetics/Views/Tema/EditarTema.cshtml
@@ -64,5 +64,7 @@
 }
 else
 {
-    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+    <script>
+        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+    </script>
 }
