--- a/webMetics/Views/Usuario/CambiarContrasena.cshtml
+++ b/webMetics/Views/Usuario/CambiarContrasena.cshtml
@@ -121,7 +121,9 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+        <script>
+            window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
+        </script>
     }
     <script>
         function togglePasswordVisibility() {
