Cambio de estilo de título.

--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -40,10 +40,10 @@
 
             <div class="card shadow" style="width: 450px;">
                 <div class="card-header text-center pt-4 pb-3">
-                    <h4 class="text-center"><strong>Sistema de Inscripciones<br />METICS</strong></h4>
+                    <h4 class="text-center text-secondary"><strong>Sistema de Inscripciones<br />METICS</strong></h4>
                 </div>
                 <div class="card-body p-4">
-                    <div class="text-center text-uppercase text-secondary"><strong>Iniciar sesión</strong></div>
+                    <div class="text-center text-uppercase text-dark"><strong>Iniciar sesión</strong></div>
                     <div class="mt-4">
                         @using (Html.BeginForm("IniciarSesion", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
