--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -17,21 +17,21 @@
 <body>
     <div class="" style="background-color: #16c1f3; margin: 0; padding: 0;">
         <div class="logo d-flex justify-content-start align-items-center">
-            <div class="logo-link mx-4">
+            <div class="logo-link mx-3 py-2">
                 <a href="https://www.ucr.ac.cr/" style="display: block;">
-                    <img src="@Url.Content("~/images/UCR_logo.png")" style="max-width: 185px; height: auto;" alt="Logo Universidad de Costa Rica" />
+                    <img src="@Url.Content("~/images/UCR_logo.png")" style="width: auto; height: 80px;" alt="Logo Universidad de Costa Rica" />
                 </a>
             </div>
 
-            <div class="logo-link me-3">
+            <div class="logo-link me-3 py-2">
                 <a href="https://metics.ucr.ac.cr/es/" style="display: block;">
-                    <img src="@Url.Content("~/images/METICS_logo.png")" style="max-width: 285px; height: auto;" alt="Logo METICS" />
+                    <img src="@Url.Content("~/images/METICS_logo.png")" style="width: auto; height: 80px;" alt="Logo METICS" />
                 </a>
             </div>
 
-            <div class="logo-link h-100">
+            <div class="logo-link py-2">
                 <a href="https://vd.ucr.ac.cr/" style="display: block;">
-                    <img src="@Url.Content("~/images/VD_logo.png")" style="max-width: 200px; height: auto;" alt="Logo Vicerrectoria de Docencia" />
+                    <img src="@Url.Content("~/images/VD_logo.png")" style="width: auto; height: 65px;" alt="Logo Vicerrectoria de Docencia" />
                 </a>
             </div>
         </div>
