--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -15,25 +15,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="" style="background-color: #16c1f3; margin: 0; padding: 0;">
-        <div class="logo d-flex justify-content-start align-items-center">
-            <div class="logo-link mx-3 py-2">
-                <a href="https://www.ucr.ac.cr/" style="display: block;">
-                    <img src="@Url.Content("~/images/UCR_logo.png")" style="width: auto; height: 80px;" alt="Logo Universidad de Costa Rica" />
-                </a>
-            </div>
+    <div style="background-color: #16c1f3; height: 90px;">
+        <div class="image-container">
+            <div class="overlay">
+                <div class="logo-link mx-3 py-2">
+                    <a href="https://www.ucr.ac.cr/">
+                        <img src="@Url.Content("~/images/UCR_logo.png")" style="width: auto; height: 80px;" alt="Logo Universidad de Costa Rica" />
+                    </a>
+                </div>
 
-            <div class="logo-link me-3 py-2">
-                <a href="https://metics.ucr.ac.cr/es/" style="display: block;">
-                    <img src="@Url.Content("~/images/METICS_logo.png")" style="width: auto; height: 80px;" alt="Logo METICS" />
-                </a>
-            </div>
+                <div class="logo-link me-3 py-2">
+                    <a href="https://metics.ucr.ac.cr/es/">
+                        <img src="@Url.Content("~/images/METICS_logo.png")" style="width: auto; height: 80px;" alt="Logo METICS" />
+                    </a>
+                </div>
 
-            <div class="logo-link py-2">
-                <a href="https://vd.ucr.ac.cr/" style="display: block;">
-                    <img src="@Url.Content("~/images/VD_logo.png")" style="width: auto; height: 65px;" alt="Logo Vicerrectoria de Docencia" />
-                </a>
+                <div class="logo-link py-2">
+                    <a href="https://vd.ucr.ac.cr/" style="display: block;">
+                        <img src="@Url.Content("~/images/VD_logo.png")" style="width: auto; height: 60px;" alt="Logo Vicerrectoria de Docencia" />
+                    </a>
+                </div>
             </div>
+            
         </div>
     </div>
 
