--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div style="background-color: #16c1f3; height: 90px;">
-        <div class="image-container">
-            <div class="overlay">
+    <div style="background-color: #65bcdc; height: 95px;">
+        <div class="logo-container">
+            <div class="d-inline-flex justify-content-start align-items-center" style="position: absolute; z-index: 0;">
                 <div class="logo-link mx-3 py-2">
                     <a href="https://www.ucr.ac.cr/">
                         <img src="@Url.Content("~/images/UCR_logo.png")" style="width: auto; height: 80px;" alt="Logo Universidad de Costa Rica" />
@@ -36,7 +36,6 @@
                     </a>
                 </div>
             </div>
-            
         </div>
     </div>
 
