--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li>
-                                    @Html.ActionLink("Información personal", "InformacionPersonal", "Participante", new { id = ViewBag.Id }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Información personal", "InformacionPersonal", "Usuario", new { id = ViewBag.Id }, new { @class = "dropdown-item" })
                                 </li>
                                 <li>
                                     @Html.ActionLink("Cambiar contraseña", "CambiarContrasena", "Usuario", new { id = ViewBag.Id }, new { @class = "dropdown-item" })
