--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -1,5 +1,6 @@
 ﻿@model webMetics.Models.GrupoModel
 @using webMetics.Controllers
+@using webMetics.Helpers
 @{
     ViewBag.Title = "Crear Módulo";
 
@@ -54,11 +55,20 @@
                         </div>
                         <div class="row mt-1">
                             <div class="col">
-                                @Html.LabelFor(grupoModel => grupoModel.modalidad, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.DropDownListFor(grupoModel => grupoModel.modalidad, new SelectList(Enum.GetValues(typeof(webMetics.Models.TipoModalidad))), "Seleccione un tipo de modalidad...", new { @class = "form-control", @id = "modalidadSelect" })
+                                @Html.LabelFor(grupoModel => grupoModel.modalidad, new { Style = "font-size:22px" })
+                                <a style="color:red;font-size:22px">*</a>
+                                @Html.DropDownListFor(
+                                         grupoModel => grupoModel.modalidad,
+                                         new SelectList(
+                                         Enum.GetValues(typeof(webMetics.Models.TipoModalidad))
+                                         .Cast<webMetics.Models.TipoModalidad>()
+                                         .Select(e => new { Value = e, Text = EnumHelper.GetDisplayName(e) }),
+                                         "Value",
+                                         "Text"),
+                                         "Seleccione un tipo de modalidad...",
+                                         new { @class = "form-control", @id = "modalidadSelect" })
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.modalidad, "", new { @class = "text-danger" })
                             </div>
-
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.cantidadHoras, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                                 @Html.TextBoxFor(grupoModel => grupoModel.cantidadHoras, new { @type = "number", @class = "form-control", @value = "" })
